--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           packages: |
             rmarkdown
+            ggplot2
           
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
